--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -9,12 +9,12 @@
 
     <ImageView
         android:id="@+id/logoo"
-        android:layout_width="130dp"
-        android:layout_height="130dp"
-        android:layout_marginBottom="50dp"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_marginBottom="70dp"
         android:layout_centerHorizontal="true"
         android:contentDescription="@string/todo"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/icononekmi"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,6 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:fontFamily="@font/avenir_bold"
         android:gravity="center"
         android:layout_marginStart="40dp"
