--- a/app/src/main/res/drawable/button1.xml
+++ b/app/src/main/res/drawable/button1.xml
@@ -3,7 +3,7 @@
     <item android:right="1dp" android:left="1dp" android:bottom="2dp">
         <shape
             android:shape="rectangle">
-            <solid android:color="@color/colorPrimaryDark"/>
+            <solid android:color="@color/yellow"/>
             <corners android:radius="20dp"/>
         </shape>
     </item>
