--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".LoginActivity">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/merdeka"
+        android:alpha="0.1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -19,23 +30,25 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@mipmap/ic_launcher" />
+            android:layout_width="120dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:src="@drawable/icononekmi" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:text="SELAMAT DATANG DI"
             android:textColor="@color/black_main"
             android:textSize="20sp"
+            android:gravity="center"
             android:textStyle="bold" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="One Event KMI 2020"
+            android:text="One KMI Event 2020"
+            android:gravity="center"
             android:textColor="@color/black_main"
             android:textSize="16sp" />
 
@@ -43,6 +56,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:hint="No Peserta">
 
             <androidx.appcompat.widget.AppCompatEditText
@@ -74,6 +89,8 @@
             android:layout_height="wrap_content"
             android:background="@drawable/button1"
             android:text="Masuk"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginTop="20dp"
             android:textColor="@color/white" />
 
@@ -109,15 +126,15 @@
             android:layout_marginBottom="10dp"
             android:fontFamily="@font/avenir_medium"
             android:gravity="center_horizontal"
-            android:text="Support Oleh"
+            android:text="Didukung Oleh"
             android:textColor="@color/black_main"
-            android:textSize="15sp" />
+            android:textSize="14sp" />
 
         <ImageView
-            android:layout_width="90dp"
-            android:layout_height="50dp"
+            android:layout_width="120dp"
+            android:layout_height="70dp"
             android:layout_gravity="center"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@drawable/logokmi" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
